--- a/rock-paperscissors.html
+++ b/rock-paperscissors.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="rock-paper-scissors.css">
 </head>
 <body>
+    <h1>Welcome to Rock Paper Scissors!</h1>
+    <div  class="button-container">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+
+    </div>
+    <div class="scores-container">
+        <div class="comp-score"><p></p></div>
+        <div class="human-score"><P></P></div>
+    </div>
+    <div class="result-container">
+        <div class="result"><p></p></div>
+    </div>
     <script src="rock-paper-scissors.js">
         
     </script>
